# yt-downloader

./: .env.example  .gitignore  README.md  db_modules_creation.md  joined.txt  requirements.txt  run-yt-downloader.bat  setup_db_modules_creation.ps1
my_project/: CLI_QUICK_REFERENCE.md  DATABASE_IMPLEMENTATION_PLAN.md  ENHANCEMENT_3_LLM_EXPORT_PLAN.md  README.md  USER_MANUAL.md  config-settings-gemini-overview.md  config-settings-openai-overview.md  core_CLI.py  download_manager.py  instructions_download_video_with_alternate_sondtrack.md  pyproject.toml  pytest.ini  run_tests.py
my_project/config/: app_config.json
my_project/db/: db_port.py  models.py  schema.sql
my_project/docs/: DATABASE_INTEGRATION_REPORT.md  TESTING_SETUP_GUIDE.md  TEST_IMPLEMENTATION_PLAN.md  TEST_IMPLEMENTATION_REPORT.md  USER_MANUAL.md  commands executed while db creation.txt  db_modules_creation.md  db_schema_models_adapter_middle_ground.md
my_project/docs/config_examples/: legacy_user_config.json  normalized_config_example.json  recommended_modern_config.json
my_project/logger_utils/config/: logger_config.json
my_project/src/my_project/: __main__.py  core.py  core_CLI.py  download_manager.py  metadata_collector.py  metadata_exporter.py  transcript_processor.py  yt_downloads_utils.py
my_project/tests/: conftest.py
my_project/tests/integration/: test_cli_workflows.py
my_project/tests/test_data/: test_urls.json
my_project/tests/unit/: test_config_normalization.py  test_core.py  test_metadata_collector.py  test_metadata_exporter.py  (+2 more)
my_project/utils/: config_utils.py
(+92 files in other folders)
