[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
description = "YouTube Downloader CLI with support for audio, video, and transcripts"
authors = [{ name="Developer", email="developer@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "yt-dlp>=2023.12.30",
    "youtube-transcript-api>=0.6.2",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0", 
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0"
]

[project.scripts]
my_project = "my_project.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]
